--- a/nest_js_practice/todo.txt
+++ b/nest_js_practice/todo.txt
@@ -10,6 +10,10 @@
 [+]:  jump to Authentication and Authorization.
 [+]:Dependancy Injections
 
+[-]: Pipes in nestJS 
+[+]: middleware in nest js
+
+
 
 
 
